manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-example-octodex
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: aws-example-octodex
  template:
    metadata:
      labels:
        app: aws-example-octodex
    spec:
      volumes:
        - name: secret-volume
          secret:
            secretName: aws-example-octadex
      containers:
      - name: aws-example-octodex
        # image: 00000000000000.dkr.ecr.my-region.amazonaws.com/example-eks:tag
        # image: REGISTRY/REPO:TAG
        # The full image will be dynamically added by Kustomize in the workflow.
        image: example-eks
        ports:
        - containerPort: 5000
        - containerPort: 443
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
        volumeMounts:
          - mountPath: /etc/aws-example-octodex/ssl
            name: secret-volume
