manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aws-example-octodex
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
    - port: 443
      protocol: TCP
      name: https
  selector:
    app: aws-example-octodex
